09_arcvive/TimeSCRPATemplet/GpMessages/1743255877900
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Wednesday, May 7, 2025 2:00:25 PM</msg><msg code="-2147467259" type="100">﻿  File "C:\Users\carucci_r\OneDrive - City of Hackensack\_Hackensack_Data_Repository\GIS_Tools\Scripts\ScriptsTimeSCRPATemplet\Updated Weekly Crime Report.py", line 83
    arcpy.AddMessage("Pivot Table (Block x Time_of_Day):
                     ^
﻿SyntaxError: unterminated string literal (detected at line 83)
</msg><msg code="0" type="0">Failed script Updated Weekly Crime Report...</msg><msg code="-2147467259" type="100">Failed to execute (WeeklyCrimeExport).</msg><msg code="0" type="3">Failed at Wednesday, May 7, 2025 2:00:25 PM (Elapsed Time: 0.06 seconds)</msg></messages>